tests/negative/parser/expect.orng
fn main() -> Int {
    let 5 = 3
}